/*
Copyright 2019-present Open Networking Foundation.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package atomix.set.service;

// Set snapshot
message SetSnapshot {
    map<string, bool> values = 1;
}

message SizeRequest {
}

message SizeResponse {
    int32 size = 1;
}

message ContainsRequest {
    string value = 1;
}

message ContainsResponse {
    bool contains = 1;
}

message AddRequest {
    string value = 1;
}

message AddResponse {
    bool added = 1;
}

message RemoveRequest {
    string value = 1;
}

message RemoveResponse {
    bool removed = 1;
}

message ClearRequest {
}

message ClearResponse {
}

message ListenRequest {

}

message ListenResponse {
    Type type = 1;
    string value = 2;

    enum Type {
        ADDED = 0;
        REMOVED = 1;
    }
}

message IterateRequest {
}

message IterateResponse {
    string value = 1;
}
